attempting to fix mobile canvas overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,7 +49,8 @@ body.needsScroll{
   overflow: hidden;
 } */
 canvas{
-  margin: 0 auto;
+  margin: 0;
   overflow-y: hidden;
   position: fixed;
+  padding: 0;
 }
